Resolves: tdf#114112 sort 'select' list

Change-Id: I0b80b2f7e8377f92a397b6557d2c3fad3e63f16a